<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/text_home"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_recomandation"
        android:enabled="true"
        android:icon="@drawable/ic_recomandation"
        android:title="@string/text_recomandation"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_reservation"
        android:enabled="true"
        android:icon="@drawable/ic_reservation"
        android:title="@string/text_reservation"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_payment"
        android:enabled="true"
        android:icon="@drawable/ic_payment"
        android:title="@string/text_payment"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/text_profile"
        app:showAsAction="always|withText" />

</menu>